Replaced right-align and left correction with dynamic height.
The former were not properly expanding the suggestions, as was being done before. This resulted in multi-line bugs when the cursor was at the far right.

The solution was to make the box support dynamic height. It will now wrap to multiple lines, and expand each row item to fit to its height. With auto-sizing, there's no need to force a right alignment.

The lingering issue that arose was a small amount of righthand cutoff, this time for a different reason. Even when autosized, the box isn't narrow enough when the cursor is at the far righthand. So when this happens, we simply shift things over a static amount. (Using the previous right-align solution resulted in the box expanding to the left until each suggestion fit to one row.)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/suggestions.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/suggestions.component.scss
@@ -48,12 +48,12 @@ mat-selection-list[dense] {
   padding: 0;
 
   > mat-list-option {
-    height: 32px;
+    height: auto;
   }
 }
 
 .mat-list-option ::ng-deep .mat-list-item-content {
-  padding: 0 8px !important;
+  padding: 6px 8px !important;
   .mat-list-text {
     padding: 0 !important;
   }
